--- a/11-05-24.md
+++ b/11-05-24.md
@@ -3,12 +3,106 @@
 [//]: <> (use `gqap` to force wrap text)
 [//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 17 - November 5, 2024 -
+# Lecture 17 - November 5, 2024 - Manufacturing Modernity: Barracks/Schools/Factories
 
 ## Lecture Outline
 
-###
+1. Picturing modernity: Sakurada Parade Ground, Tokyo
 
-#### 1.
+- foreground (hustle + bustle) vs. background (organized military)
 
-### Key Terms
+2. Barracks and conscription
+
+- could get out of conscription by school, bribes, being a doctor, etc (French style)
+- usually only took one son from each family
+- exempting the male heads of household b/c they pay taxes
+- west called conscription "the blood tax", which fueled anxiety about it within the Japanese
+  populus
+- in 1883, major reform on conscription system
+  - new structure: 3 years of active duty, 4 years of first reserve service, and 5 years of second
+    reservice
+  - affluent still were able to get around by paying to only have to serve 3 years active service
+- note: The Franco-Prussian War (1870-71) was a major influence on the Japanese conscription system
+  - Japan sees this as a model, and shift to the Prussian/German model of an army/conscription
+- In 1888, the garrison system (focused mainly on being ready to respond to civil uprising systems
+  within the country) is refocused into the possibility of overseas deployment, with a system of
+  independent divisions who would be ready to deploy overseas.
+  - 7 divisions established and movement to establish a modern Navy
+- conscipriton was still not popular, and doctors who could get patients out of it were still
+  popular
+- evidence that into the 1880s, the army still had credibility problems in the eyes of the samurai,
+  and resentment of people who were conscripted from peasant families
+- there are other ways to see the culture of the military spreading to common aspects of society
+  - good example is the schooling system
+
+3. Schools and education
+
+- in 1872, government set out to create a modern education system
+  - also inspired by the Iwakura mission
+- in the early Meiji period, rapid expansion of this system
+- not superwell organized + expensive in its early years
+- Mori Ariori (Satsuma) was the first minister of education
+  - samurai; founds the Meiroki-sha
+  - becomes minister of education in 1885
+  - believes that education can be used to build up the nation
+    - values that most need to be taught applied knowledge + with scholarship being restricted to
+      the academic elite
+    - bedrock of knowledge to be taught in elementary schools
+  - not focused on critical thinking
+  - attendence to elementary school was made mandatory for 4 years, with the ability to extend to 4
+    more years if parents wanted
+  - required parents to pay for 4 year elementary education, but provided a free 3-year education
+    (but came with stigma, so most tried to send to 4 year)
+  - in 1887, only 40% of children were attending elementary school, but by 1905, 90% were attending
+    (boys and girls)
+  - In 1900, free public education is introduced
+  - he was assassinated in 1889
+- middle schools and high schools were also established, but were like a pyramid, where only a few
+  could attend
+- also set up private universities
+- but pinnacle of the system were the imperial universities, most important of all was Tokyo
+  Imperial University
+  - main gateway into the imperial bureaucracy
+  - Remember Yamakawa Kenjiro
+    - first Japanese graduate of Yale
+    - first professor of physics at Tokyo Imperial University
+    - president of Tokyo Imperial University and Kyoto Imperial University
+    - founder and president of Kyushu Imperial University
+- also set up normal schools to train teachers
+- Higher Normal School (Tokyo) ca. 1887
+- taught middle school teachers and those that taught at the normal schools
+- Mori wanted to use military drills/discipline within the normal schools, as they were getting the reputation
+  of being too relaxed
+- punishments/trials to address behavioral concerns
+  - anxiety caused by these led to them sleeping in their uniforms in case of nightly drills
+  - gave birth to fiercely strict teachers, who were teaching other teachers/educators
+  - this leads to new sense of tension/discipline within the school system
+-
+
+4. Nation building, the "Emperor system," and the New Technologies of Discipline
+
+- school reading of the imperial rescript on education
+- ceremonies with emperor's/empress's images behind them, with various school readings/announcements
+- lead to significant reordering of many people's lives
+- idealized vision of how space/time should be organized within education
+
+5. Factories and the Industrial Revolution
+
+- Shiubusawa Eiichi - Osaka Cotton Spinning Company
+  - sets up numerous companies/factories that drive Japanese industrialization
+  - prioritize cheap labor, recruiting young girls from the countryside and housing them in dorms
+- industrialization was really driven by the female workforce (3/5 were women, with remaining 2/5
+  men being more likely to be supervisors, etc)
+
+## **Key terms**
+
+- Mori Arinori (1847-89; Satsuma)
+- Elementary School
+- Middle School
+- Higher School
+- Tokyo Imperial University (_Tōkyō teikoku daigaku_)
+- Normal School (_shihan gakkō_)
+- The "Emperor system" (_Tennō-sei_)
+- "Observe the time" (_jikan genshu_)
+- Osaka Cotton Spinning Company 1883
+- Shibusawa Eiichi (1840-1931)
