--- a/11-07-24.md
+++ b/11-07-24.md
@@ -3,12 +3,116 @@
 [//]: <> (use `gqap` to force wrap text)
 [//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 18 - November 7, 2024 -
+# Lecture 18 - November 7, 2024 - The Mixed Blessings of Modernity: Treaty Revision, Punishment and the Colonization of Hokkaido
 
-## Lecture Outline
+### Lecture Outline
 
-###
+#### 1. Tokugawa Punishments and Extraterritoriality
 
-#### 1.
+- **Cesare Beccaria** and **John Howard**
+  - Beccaria's _Of Crimes and Punishments_ (1764)
+  - laid the foundation of the modern penal system
+  - "cruel and unusual punishment" came from this
+  - Eastern State Penitentiary in Philadelphia
+    - first building in the country to have indoor plumbing
+      - becomes a course of pride/tourism
+- ultimately leads to rethinking of punishment/change over time
+  - in 19th century, the division of time (us in the present vs them in the past), were also divided
+    geographically (i.e. the west has civilized punishments, while some areas/the rest of the world
+    did not)
+  - important in the context of gunboat diplomacy/Extraterritorial provisions in the unequal
+    treaties
+    - the types of punishments still being used in Japan were seen as barbaric
+      - crucifixion, harakiri, burning alive (at the stake), display of severed heads (gokumon),
+        standard decapitation, public floggings, and tattooing (marking body as criminal)
+  - in this system, imprisonment was not seen as a punishment, as jails were only a way to hold
+    people until sentencing
+
+#### 2. Treaty Revision and Early Meiji Reforms
+
+- whenever the discussion of treaty revision came up, the issue of punishment was also brought up
+  by the west
+- Earl Gray (House of Lords) was worried about the possibility of another expensive foreign war
+  and suggests to throw the Tokugawa a bone and remake the treaties such that the two countries are
+  more equal
+  - In response, John Russul (British Foreign Secretary) rebukes this, saying that the Japanese
+    were backwards
+- does not take long for the status-conscious Japanese leaders to realize that their Tokugawa era
+  punishments were seen as a central symbol as backwardness
+  - reforming the penal system should be a priority in order to revise the treaties with the west
+  - soon after the restoration, a Justice Ministry was established
+    - the **Gyōbusho** (Ministry of Punishments), which eventually becomes a Justice Ministry
+      - banned tattoing, crucifixion, and many other "barbaric" forms of punishment
+
+#### 3. Hokkaido and the Central Prison System
+
+- **OHARA Shigechika** (1834-1902)
+  - a former samurai who was sent to study in the US
+  - made in charge of the old Tokugawa prisons
+  - originally spent some time in the prisons, but after he was released, became interested in the
+    western prison system
+  - he was the one who pushed for the modernization of the penal system
+  - In 1870, he makes an appointment with Kido Koin to discuss the need to study the western prison
+    system
+  - Kido agrees and sends him to Hong Kong/Singapore to study the prison system
+    - why Hong Kong/Singapore? because they were British colonies which had a large rice-eating
+      population, and Japan was also a rice-eating population (providing a good comparison, as food
+      was a major part of the prison system)
+- Jeremy Bentham's Panopticon
+  - a prison design that allowed for the constant surveillance of prisoners
+  - the idea was that the prisoners would always be watched, and therefore would always be on their
+    best behavior
+  - this idea was taken up by OHARA and used in the design of the new prisons
+- **Kangoku** = "Surveillance jail" i.e. Modern prison
+  - Ohara comes back to Japan and also starts advocating for other changes
+    - elimination of flogging for short sentences
+    - eliminiation of the death penalty for life in prison
+    - use of hanging by gallows instead of beheading
+- Prison was seen as a way to discipline and expel the evil, not simply to punish
+- After the Satsuma Rebellion, the government can't just execute them all, so it serves as a trigger
+  for a new interest to build new prisons
+- **Miyagi Prison** (1874) in Sendai
+  - the biggest wooden building in Japan at the time
+  - very similar to Eastern State Penitentiary in Philadelphia
+  - first modern prison in Japan
+  - can only hold 1000 prisoners, but Japan needs more
+- leads to construction of series of rebellions
+- Satsuma rebels were forced to make the bricks with advice by the British, and those bricks were
+  used to build new prisons/paved roads
+- Ito Hirobumi (younger Choshu on the Iwakura mission)
+  - recognizes that Hokkaido is could be conquered by the Russians very easily
+  - decides to take over Hokkaido, but the issue is that there is not a lot of labor in Hokkaido
+  - decides to send prisoners up to Hokkaido, and after they finishes their sentences, they would
+    stay in Hokkaido
+  - team was sent to Hokkaido to build a prison in 1880
+  - using an Inu guide, they find a place to build the prison and by 1881, the prison is built
+
+#### 4. Reform and the Legacies of Prison Labor
+
+- in 1876, the total prison population was 16,000, but by 1882, it was 32,000
+  - freedom of popular rights movement was a big reason for this
+  - Matsuoka deflation (1876) was another reason
 
 ### Key Terms
+
+- **Cesare Beccaria**, _Of Crimes and Punishments_ (1760s)
+- **John Howard**, _The State of the Prisons of England_ (1777)
+
+- _Hara kiri_ — _haritsuke_
+- Burning alive = _kazai_
+- Display of severed head = _gokumon_
+
+- **Gyōbusho** — _Ministry of Punishments_
+
+- **OHARA Shigechika** (1834-1902)
+- **Kangoku** = “Surveillance jail” i.e. Modern prison
+- **Miyagi Prison**
+- **Miike Prison**
+
+- **ITŌ Hirobumi** (1841-1909)
+- **Gustave BOISSONADE** (1825-1910)
+- Western (French) style Penal Code 1880
+
+- **Abashiri** = Japan’s Alcatraz
+
+- **KANEKO Kentarō** (1853-1942) (First Japanese graduate of Harvard Law School – Boo!)
