--- a/11-07-24.md
+++ b/11-07-24.md
@@ -92,6 +92,14 @@
 - in 1876, the total prison population was 16,000, but by 1882, it was 32,000
   - freedom of popular rights movement was a big reason for this
   - Matsuoka deflation (1876) was another reason
+- succeed in drafting their first penal code being helped by the French
+- Japanese government uses this new-found labor to push ahead in their mining enterprises and really
+  build out the infrastructure for the modern colonization of Hokkaido (highways, agriculture, etc.)
+- working conditions in Hokkaido were attrocious (1 in 10 died from being worked to death)
+  - but this was actually pretty deliberate
+  - Kaneku Kentaro (1853-1942) was a central proponent, basically blaming the prisoners for not
+    being able to cope; kill them off, cost us less, win-win
+- Japanese
 
 ### Key Terms
 
