--- a/11-12-24.md
+++ b/11-12-24.md
@@ -3,12 +3,94 @@
 [//]: <> (use `gqap` to force wrap text)
 [//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 19 - November 12, 2024 -
+# Lecture 19 - November 12, 2024 - The Meiji Constitution and the Politics of Compromise
 
-## Lecture Outline
-
-###
+### Lecture Outline
 
 #### 1.
+
+- political crisis in 1881
+  - Liberal Party - lead by Itagaki Taisuke
+  - puts a lot of pressure on political leaders to create a constitution
+  - Okuam is willing to put in a constitution, but that leads to him being driven out of the
+    government
+  - leads to Okuma creating the Progressive Party
+  - at the same time, the Meiji leaders announce that they will create a constitution/parliament
+    within a decade
+- perspective of the oligarchs
+  - think of them as revolutionaries
+  - Meiji oligards "were driven by a form of collective Messianic complex... Their constributions in
+    bringing about the Restoration, they felt, fully justified their assumption of this role, and each
+    step toward a stable and powerful Japan served to bolster this conviction."
+- but from the point of view of the other politicians/parties, they saw this as the Meiji oligarchs
+  simply using this to claim power, rather than sharing the power among everyone
+  - oligarchs were convinved that party politics/politicians were most likely to become the most
+    selfish and corrupt
+    - "transcendental" politics; represent the nation as a whole, not just the interests of a
+      few/party
+- oligarchs do embrace the idea of popular representation in some form
+  - problem was to ensure that power could be shared with these opposition politicians in a way that
+    was manageable, allowing the oligarchs to remain in the driving seat
+  - begin to grapple with the task of drafting a western-style constitution
+- start studying other constitutions, and some were very progressive
+- oligarchs wanted to ensure that the power remained with the emperor; had to convince the
+  population that the emperor had to be centered around the constitution
+- task is given to Ito Hirobumi (1841-1909) in 1882, leading a new mission to Europe to observe and
+  study the constitutions of European countries; them in action; and to talk with scholars
+  - planned on using the prestige of european scholars and theoretical fortifications to justify
+    their constitution (based on the sovereignty of a monarch) in Prussia/Germany
+- Ito and a committee drafts the constitution, recruiting a german scholar, Herman Roesler, to help him
+- Meiji leaders also make other preparations for the beginning of a constitutional government
+- In 1884, the government announces a peerage ordinance; creating a new 5 tier hierarchy of peers of
+  the realm (aristocrats)
+  - plan was to keep a bicameral system, with the upper house being a house of aristocrats to
+    balance out the popularly elected lower house
+- old Dai Jo kan - Meiji leaders also make other preparations for the beginning of a constitutional
+  government
+- new cabinet system; functional, but also easily legible to the west
+- Ito Hirobumi becomes the first prime minister of Japan in 1885
+  - replaced in a few years by Kuroda Kiyotaka from Satsuma
+  - Kuroda is replaced by Yamagata Aritomo from Choshu
+  - Matsukata Masayoshi from Satsuma becomes the next prime minister
+  - swapping between Satsuma and Choshu occurs until early 1900s
+- new constitution is promulgated in Feb. 11, 1889
+  - i.e. the constitution is a gift from the emperor to the people
+- Miyatake Gaikotsu (1867-1955)
+  - from Edo
+  - writes satires of Meiji leaders, and in return, he is put in jail
+  - makes a parody of giving the constitution to Ito, replacing the emperor with a skeleton
+- anything issued in the emperor's name had to be signed off by the cabinet/ministers
+- made sure that the ministers could be held accountable for the policies they made
+- [Meiji Constitution](https://www.ndl.go.jp/constitution/e/etc/c02.html)
+- only rich men over 25 could vote
+- landlords and wealthy entrepreneurs dominated voting; with opposition parties dominating the lower
+  house in the first election
+- opposition parties wants to cut spending + cut taxes
+  - puts them in opposition of Meiji oligarchs, who wanted to make sure that Japan had a strong
+    military
+- budget bills still had to be approved by the Diet (lower house)
+- for the first 4/5 years, the opposition parties rejected the oligarchs proposed budgets time and
+  time again, leading to a major debate amongst the oligarchs on how the deal with them
+  - leads to a divide between Iro Hirobumi and Yamagata Aritomo (considered the father of the army;
+    face of military power within the government)
+  - Ito starts to favor some form of limited cooperation with the opposition parties, building
+    bridges with the liberal party
+  - Yamagata is not interested in this, and firmly believes that the oligarchs are the ones that can
+    transcend the selfish interests; becomes a leader of a powerful faction within the bureaucracy
+  - leads to the collapse of the cabinet
+- Ito gets a second shot at building a new cabinet, and as a result, Ito is able to rule fairly effectively for a few years
+- Ito is forced to resign after he fails to get a key bill through the Diet
+- tries again later on, but is forced to resign rather quickly
+- then invite Itagaki Taisuke and Okuma Shigenobu to form a coalition government
+- but them are unable to comprise
+- Ito forms his own political party, the Rikken Seiyukai (Friends of Constitutional Government)
+- fear of western powers seeing them as barbaric (in the wake of all of the white supremacy) and
+  continuing movement of popular rights + freedoms in Japan leads the desire to continue this form of
+  government, even though it started off very slow
+- spirit of nationalism, which starts to grow from the 1890s, with the political parties being
+  labeled as unpatriotic and traitors to the country for not supporting the government
+- Diet decides to increase overall tax revenues by levying new indirect taxes on Sake, tobacco, etc,
+  and were able to decrease the proportion of tax collection from land taxes
+- able to make their constituents happy
 
 ### Key Terms
