--- a/10-29-24.md
+++ b/10-29-24.md
@@ -149,3 +149,16 @@
 - Ōkubo Toshimichi (1830–78) [Satsuma domain]
 - Etō Shimpei (1834–74) [Saga (also known as Hizen) domain]
 - Itagaki Taisuke (1837–1919) [Tosa domain]
+
+tools, horse (who provided (consul, Mr. Eusden, god the Governor to issue her a shomon, so she could obtain horses), how was treated, road conditions, Ito, who helped, from village to
+village)
+
+bottom of 237 - its most displeasing
+
+243 - 244 - It is so good to have got beyond the confines of stereotypes civilization...
+
+Ito - accompanies her on her travels; carries her bags,
+
+- 242 (last paragraph - violent altercation)
+- 232 (very clever, but also but also untrustworthy), but she promised to return
+-
