--- a/11-12-24.md
+++ b/11-12-24.md
@@ -92,5 +92,7 @@
 - Diet decides to increase overall tax revenues by levying new indirect taxes on Sake, tobacco, etc,
   and were able to decrease the proportion of tax collection from land taxes
 - able to make their constituents happy
+- lead to pressure for increased expansion of voting, which lead to universal male suffrage in 1925,
+  and in 1931, Japan came very close to giving women the right to vote (end up getting it after WWII)
 
 ### Key Terms
