--- a/11-14-24.md
+++ b/11-14-24.md
@@ -3,12 +3,126 @@
 [//]: <> (use `gqap` to force wrap text)
 [//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 20 - November 14, 2024 -
+# Lecture 20 - November 14, 2024 - From Ryukyu to Okinawa (via Taiwan)
 
-## Lecture Outline
+### Lecture Outline
 
-###
+- 1644 - when the Ming dynasty fell to the Manchu invaders, leading to the establishment of the Qing
+  dynasty
 
-#### 1.
+#### 1. The Ryūkyū Kingdom in the Tokugawa Period
+
+- 16th century trading empire - formed an extensive trading network throughout asia
+- based on the skill of Ryukyu sailors in navigating the seas and them being sponsored by the Ming
+  Dynasty all over the region
+- Through it lacked a strong military, it was very important (and became very rich) to Ming China
+- Shuri Castle, near Naha
+  - home of the Sho dynasty - kings of Ryukyu
+  - destroyed in WWII in the battle of Okinawa; was rebuilt and then burned down (2019); currently
+    being rebuilt
+- When the Ming dynasty started to decline in the 16th century, it was felt un Ryukyu
+- The Satsuma invasion of 1609 - send 3000 samurai to conquer samurai
+  - encountered very little resistence
+  - brought back the king of Ryukyu and other important leaders to Satsuma as a hostage; forced to
+    sign formal surrender documents
+    - but the documents were interesting, rewriting the history of Ryukyu to make it seem like
+      Ryukyu has always been a vassal of Satsuma; with plans to incorporate Ryukyu into Satsuma
+  - forced cultural assimilation at first; but was soon reversed, where Ryukyuans were strictly
+    prohibited from acting Japanese, wearing Japanese clothes, using Japanese names, etc.
+- Between China, Satsuma and the Bakufu
+  - Satsuma originally planned to use Ryukyu to get information from China
+    - had to pretend that Ryukyu was independent
+  - boosted Satsuma's prestige by being the only daimyo to have a vassal kingdom
+  - Ryukyuans began to embrace their own culture values + embrace Chinese values
+  - Ryukyuan Elite (yukatchu) - had to learn both Chinese and Japanese in order to straddle all of
+    their worlds
+
+#### 2. The Taiwan Expedition of 1874
+
+- The massacre of Ryūkyūan fishermen by Taiwanese aborigines, 1871
+- 1871 - 66 Ryukuans headed for Miyako Island
+  - shipwrecked in Mudan, southern Taiwan, where they encountered Taiwanese aborigines
+  - some were killed and some were able to escape\
+  - Note; Up until the 16th century, Taiwan was only inhabited by aborigines
+    - Portuguese in 1542 (Ilha Formosa - Beautiful Island)
+    - Dutch in 1624 (Fort Zeelandia)
+    - Spanish in 1626 (Fort San Domingo)
+    - Dutch kicked out the Spanish in 1642
+    - 1662 Dutch kicked out by Zheng Chenggong (Koxinga) 1624-62
+      - half Japanese, half Chinese; born in Hirado, Japan
+      - returned to China and took the official examination, set up for a career in the Ming
+        Dynasty. But after the Ming dynasty collapsed, he became a Ming loyalist and decided to make
+        Taiwan his base, defeating the Dutch
+    - 1683 - Qing dynasty took over Taiwan
+- Japan needed to resolve the ambiguity of Ryukyu's status
+- 1872 - Ryuku Kingdom -> Ryukyu Domain
+  - promoted from a prefecture
+  - started to build up Ryukyu in case of an attack from Taiwan
+- 1874 - Taiwan Expedition
+  - consolation prize for not being able to send troops to Korea
+  - appoint Saigō Tsugumichi (younger brother of Saigō Takamori) as the commander
+  - 3,600 troops sent to Taiwan
+  - 1874 - Battle of Stone Gate
+    - 3,600 troops sent to Taiwan
+    - 1874 - Battle of Stone Gate
+      - 12 Japanese
+- 1874 - Qing signed the Treaty of Tientsin
+  - Taiwan was ceded to Japan and China accepted blame
+  - international treaty explicitly stated that Ryukyu was a part of Japan (legally)
+- 1875 - first Japanese governor of Ryukyu
+- 1879 - Ryukyu domain becomes Okinawa Prefecture
+  - old king was given the title of marquis
+
+#### 3. "Okinawa Prefecture" and the Policy for “Preservation of Old Customs”
+
+- The establishment of Okinawa prefecture
+  - abundantly clear the Japan was going to treat Okinawa prefecture as a subjugated territory
+  - 2nd governor of Okinawa made a personal tour of the islands, and was shocked by the poverty and
+    the lack of infrastructure
+  - proposed to streamline the admin and help the poor (not asking for money or to raise taxes; but
+    simply wanted to redistribute things)
+    - received no response from Tokyo
+    - rewrote the letter, but Matsukata Masayoshi denied the request and forces him to resign
+- The usefulness of the yukatchu and the “Preservation of Old Customs”
+  - the yukatchu were the only ones who could speak Chinese and Japanese
+  - yukatchu were fleeing Okinawa for China
+  - but Japanese needed yukatchu (okinawan elites) to help them govern Okinawa
+  - when samurai stipends were abolished, the yukatchu were given a stipend to help them maintain
+    their lifestyle until 1909
+  - conscription was not enforced in Okinawa until 1898
+- prefectural assembly elections:
+  - Japan 1890 but Okinawa 1909 (national vote 1912)
+- Paid millions of yen in taxes, but only got a small fraction of that back
+- continued to be treated as a subjugated territory
+- Okinawan Migration
+- started to emigrate abroad (about 20,000 went to Hawaii to work on sugar plantations)
+  - discriminated against in Hawaii by the Japanese imigrants
+
+#### 4. Legacies
+
+- World War II and the present situation in Okinawa
+  - experienced a land invasion by the allied forces
+  - estimate 1/2 of the population lost their life in this battle
+  - US occupation lasted until 1972
+  - many US bases still remain in Okinawa, taking ~15% of the land
+  - 66% of US bases in Japan are in Okinawa, even though Okinawa is only ~1% of Japan's land
+- Okinawa is at the front-line of great power politics within the region
 
 ### Key Terms
+
+- Ryūkyū (sometimes also rendered as Loochoo)
+- Okinawa
+- Shuri Palace
+
+- Chinese dynasties
+
+  - Ming dynasty 1368-1644
+  - Qing dynasty 1644-1912
+
+- Yukatchu _(hereditary ruling class in Ryūkyū kingdom)_
+
+- Zheng Chenggong (1624-62) a.k.a. Koxinga
+
+- Saigō Tsugumichi (1843-1902) (Younger brother of Saigō Takamori)
+
+- “Preservation of Old Customs” _(Kyūkan hozon)_
