--- a/11-19-24.md
+++ b/11-19-24.md
@@ -3,12 +3,170 @@
 [//]: <> (use `gqap` to force wrap text)
 [//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 21 - November 19, 2024 -
+# Lecture 21 - November 19, 2024 - The Sino-Japanese War and the Triple Intervention
 
-## Lecture Outline
+### Lecture Outline
 
-###
+#### I. **The end of “Civilization and Enlightenment”**
 
-#### 1.
+- Increasing government restrictions on political association
+  - women were not allowed to join political associations
+    - essentially repressed and did not have the rights they previously had in the political realm
+- The _“Imperial Rescript on Education,” 1890_
+  - distributed to schools and schools were required to display a copy of this and the emperor's
+    portrait for all students to see
+  - a lot of emphasis that people were tied to the emperor and it was their duty to restore the
+    Japanese empire
+  - but this was not automatic; given the right circumstances, people in Japan could be just as
+    rebelious as people across the world
+- Rivalries on the Korean Peninsula
+
+#### II. **Japan plays Perry: Treaty of Kanghwa 1876**
+
+- remember that goals for Japanese expansion into Korea had started in the late Tokugawa period,
+  and the idea that Japan needed to put the Koreans in their place in the early Meiji period leads
+  to the first great splits in the Meiji oligarchs
+- not long after the split, the Meiji oligarchs decide to send Japanese gunboats to Korea to force
+  them to sign a peace/trade treaty in 1876 (Kanghwa Treaty)
+- Japan starts moving troops into Korea, and the Chinese decide to do the same thing
+- remember the failed coup attempt in 1884; supported by Japanese intellectuals and politicians,
+  like Fukuzawa Yukichi; turns out to be a disaster and is crushed after 3 days
+- leads to heightened tensions between Japan vs Korea/China
+- 1885 - China and Japan agree to withdraw troops and deescalate the situation, but Korean court
+  looks increasingly to the China (Qing) for support, while Japan starts to form a stronger economic
+  foothold in Korea (prices of food start to increase; general sense of turmoil in Korea and in
+  the political realm, which helps feed the popularity of the new religious, Tonghak/Donghak
+  Rebellion in 1894)
+  - aggressive campaign against the oppression of Koreans by the Joseon dynasty and the presense of
+    foreigners in Korea
+  - Korean court first sends its own troops in to quash the rebellion, but when that fails, the
+    Joseon court turns to the Qing dynasty for help/troops
+  - China uses this to make a power play, but the Japanese saw that as an excuse to send their
+    own troops into Korea to "free them from the Chinese"
+  - Korean troops go underground after hearing that both Chinese and Japanese troops were coming
+    to the Korea
+  - negotiations between Japan and China but the Japanese proposals are shot down by the Qing
+    dynasty, leading to a breakdown of negotiations
+  - By the end of 1884, Meiji Japan convinced British support against China in the event that
+    anything happens in Korea
+  - one week later, they seize the Joseon court and force the Korean court to "ask" the Japanese for help and to send troops
+    to defend Korea against China
+
+#### III. **The Sino-Japanese War and its Reportage in Japan**
+
+- Li Hung-Chang (Hongzhang) takes control of the Chinese forces, and on the battlefield, the
+  Japanese quickly show their superiority since htey had a decade to prepare
+- The Outbreak of War with China, July 1894
+  - A String of Japanese Victories:
+    - Pyong-yang
+    - Yellow Sea
+    - Liaotung Peninsula (dramatic move as was directly in China's mainland; fighting was fierce,
+      but Hapanese get control)
+    - Weihaiwei (another Chinese port in the Yellow Sea)
+  - Also decide that the next step is to seize Taiwan, which was a Chinese territory
+- People in Japan that were making newspapers and art about their powerful military and how exciting
+  it was
+  - Kobayashi Koyochika, a famous woodblock artist, made a lot of prints about the war
+    - [artwork](https://visualizingcultures.mit.edu/kiyochika_tokyo/ki_essay01.html)
+
+#### IV. **The Art of War: Kobayashi Kiyochika and his Wartime Prints**
+
+- Peace Negotiations and the Triple Intervention
+  - negotiations open in Shimonoseki, Japan
+  - Qing is represented by Li Hung-Chang, who is a very experienced diplomat and Japan is represented
+    by Ito Hirobumi
+  - soon after they opened, a nationalist in Japan kills Li Hung-Chang on Japanese soil
+  - Japanese offer to immediately suspend hostilities
+    - 1. China will now officially recognize Korea's independence
+    - 2. Qing agree to ceed Taiwan (and Pescadores Islands) to Japan
+    - 3. China will ceed Port Arthur to the Japanese
+    - 4. Qing will pay 300 million yen as reperations to the Meiji government for damages
+    - 5. Qing will give Japan the same privileges that the Western powers have in China, i.e. an
+         unequal treaty
+- Japanese Reaction to Victory: The Case of Tokutomi Sohō
+  - one of Japan's most important journalist
+  - before the time of the Sino-Japanese war, he was an active memory of the People's Rights
+    movement
+  - In 1894, he is already writing "The defeat of China marks a new epoch in Japanese history... It
+    brings the nation in one leap from a antional existence to a world ecistence"
+  - "Regarding us as savages who have suffedly imitated civilization, [Westerners] are only
+    impressed by our skill in imitating. But now, we are no longer ashamaed to stand before the world
+    as Japanese. [Now the Westerners know] that civilization is not a monopoly of the white man."
+- The Triple Intervention: From Jubilation to Anguish
+  - A week after signing the treaty, the Japanese receive news that an alliance between Germany,
+    Russia, and France tell them to ceed the gained land and stop Japanese expansion into China/that
+    area, so Russia can try to be the dominant power in the region
+  - [triple intervention](https://en.wikipedia.org/wiki/Triple_Intervention)
+  - leads to national (racial) humiliation in Japan, and the Japanese people not rally to the
+    government's side and their desire for war has been created
+  - Soho declares that a stronger military/wars are needed b/c nobody is going to respect Japan
+    unless they have a strong military
+  - leads to a 10 year plan to be able to beat either Britain or France+Russia in a war
+    - plan to use the reparation payment from China to pay for this + jumpstart an industrial
+      revolution in Japan
+  - domination of Japanese in markets in Korea helps fuel expansion and growth; and there is some
+    ambivalence/disallusionment by Japan about the West
+  - in the west, there was the notion of a "yellow peril" that the Japanese were going to take over
+    the world, using the brute force of the population of Asia to take over the west
+- the entire society becomes obssessed with the military; holding military funerals; giving children
+  guns/toy soldiers; teaching them in schools, etc
+- The Emperor and the War
 
 ### Key Terms
+
+- Treaty of Kanghwa 1876
+- Tonghak (Eastern Learning)
+- King Kojong (1864-1907)
+- Li Hongzhang (= Li Hung-chang) (1823-1901)
+
+- Major Japanese victories:
+
+  - Pyong-yang
+  - Yellow Sea
+  - Liaotung Peninsula
+  - Weihaiwei
+
+- Kobayashi Kiyochika (1847-1915)
+- Treaty of Shimonoseki 1895
+- Tokutomi Sohō (1863-1957)
+- Triple Intervention – France, Germany, Russia
+
+### Imperial Rescript on Education (October 30, 1890)
+
+Know ye, Our subjects: Our Imperial Ancestors have founded Our Empire on a basis broad and
+everlasting and have deeply and firmly implanted virtue; Our subjects ever united in loyalty and
+filial piety have from generation to generation illustrated the beauty thereof. This is the glory of
+the fundamental character of Our Empire, and herein also lies the source of our education. Ye, Our
+subjects, be filial to your parents, affectionate to your brothers and sisters, as husbands and
+wives be harmonious, as friends true; bear yourselves in modesty and moderation; extend your
+benevolence to all; pursue learning and cultivate arts, and thereby develop intellectual faculties
+and perfect moral powers; furthermore advance public good and promote common interests; always
+respect the Constitution and observe the laws; should emergency arise, offer yourselves courageously
+to the State; and thus guard and maintain the prosperity of Our Imperial Throne coeval with heaven
+and earth. So shall ye not only be our good and faithful subjects, but render illustrious the best
+traditions of your forefathers.
+
+The Way here set forth is indeed the teaching bequeathed by Our Imperial Ancestors, to be observed
+alike by Their Descendants and the subjects, infallible for all ages and true in all places. It is
+Our wish to lay it to heart in all reverence, in common with you, Our subjects, that we may thus
+attain to the same virtue.
+
+The 30th day of the 10th month of the 23rd year of Meiji (October 30, 1890). (Imperial Sign Manual.
+Imperial Seal.)
+
+### Japan Weekly Mail (June 1, 1895)
+
+Never did Tokyo wear a gayer appearance and never were all classes more thoroughly represented in
+the vast crowd that surged through the streets than on Thursday, when His Majesty the Emperor, so
+long absent from his Imperial city, returned to the metropolis, crowned with the laurels of a
+victorious war. No matter how great the friction between political parties and the Cabinet, no
+matter how deep-seated the dissatisfaction on account of the inevitable retrocession of Manchuria
+(Liaotung Peninsula) all hearts have ever shown unswerving loyalty and prompt obedience to the
+Emperor’s will. His Majesty’s indefatigable labors, frugality, and actual discomfort while at
+Hiroshima, for so many months the Head-Quarters have created a profound impression on the hearts of
+the people, with whom “fidelity to the Imperial House” has ever proved a watchword potent to still
+all storms. The kindly interest expressed in the welfare of those engaged in the war, the frequent
+visits to Hospitals and the sick and wounded, the numerous imperial donations of little comforts and
+luxuries that mean so much to soldier or sailor far from his native land—all these things will
+remain indelibly impressed on the memory of the present generation and be the boast and pride of its
+descendants…
